# mllm-assistant

./: .gitignore  .gitmodules  README.md  mllm-assistant.code-workspace
mllm-security/: README.md  pyproject.toml
mllm-security/miscellaneous/: gpt_logprobs_response_example.json
mllm-security/output/: results-atk-all-gpt-4o.pkl  results-atk-all-gpt-4o.yaml  results-atk-all-with-no-steering-gpt-4o.pkl  results-atk-all-with-no-steering-gpt-4o.yaml  results-atk-all-with-no-velocity-gpt-4o.pkl  results-atk-all-with-no-velocity-gpt-4o.yaml  results-atk-steering-gpt-4o.pkl  results-atk-steering-gpt-4o.yaml  results-atk-steering-with-no-velocity-gpt-4o.pkl  results-atk-steering-with-no-velocity-gpt-4o.yaml  results-atk-velocity-gpt-4o.pkl  results-atk-velocity-gpt-4o.yaml  results-atk-velocity-steering-gpt-4o.pkl  results-atk-velocity-steering-gpt-4o.yaml  results-atk-velocity-with-no-steering-gpt-4o.pkl  results-atk-velocity-with-no-steering-gpt-4o.yaml  results-atk-visual-gpt-4o.pkl  results-atk-visual-gpt-4o.yaml  results-atk-visual-steering-gpt-4o.pkl  results-atk-visual-steering-gpt-4o.yaml  results-atk-visual-velocity-gpt-4o.pkl  results-atk-visual-velocity-gpt-4o.yaml  results-atk-visual-with-no-numeric-gpt-4o.pkl  results-atk-visual-with-no-numeric-gpt-4o.yaml  results-atk-visual-with-no-steering-gpt-4o.pkl  results-atk-visual-with-no-steering-gpt-4o.yaml  results-atk-visual-with-no-velocity-gpt-4o.pkl  results-atk-visual-with-no-velocity-gpt-4o.yaml  results-normal-gpt-4o.pkl  results-normal-with-no-numeric-gpt-4o.pkl  results-normal-with-no-numeric-gpt-4o.yaml  results-normal-with-no-steering-gpt-4o.pkl  results-normal-with-no-steering-gpt-4o.yaml  results-normal-with-no-velocity-gpt-4o.pkl  results-normal-with-no-velocity-gpt-4o.yaml  results-normal-with-no-visual-gpt-4o.pkl  results-normal-with-no-visual-gpt-4o.yaml
mllm-security/output/Fixed_Value/: README.md  results-atk-steering-gpt-4o.pkl  results-atk-velocity-gpt-4o.pkl  results-atk-velocity-steering-gpt-4o.pkl
mllm-security/output/Poisoning_v1/: README.md  results-atk-all-gpt-4o.pkl  results-atk-visual-gpt-4o.pkl  results-atk-visual-steering-gpt-4o.pkl
mllm-security/src/mllm_security/: __main__.py  attack.py  cml.py  gpt.py  llama.py  loader.py  sts.py  test.py
mllm-security/src/mllm_security/analysis/: __init__.py  modal_dependency.py  modal_in_all.py  modal_number.py  util.py
mllm-sensor-server/: .gitignore  README.md  pyproject.toml
mllm-sensor-server/src/legacy/: udp_side.py
mllm-sensor-server/src/mdaq_watcher/: __main__.py  udp_server.py
mllm-sensor-server/src/mllm_server/: __main__.py  scaner_udp.py  server.py  types.py  utils.py
mllm-sensor-server/src/mllm_server/routers/chatbot/: router.py
mllm-sensor-server/src/sensor_server/: __main__.py  fake.py  scaner.py  server.py
mllm-server/: .gitignore  pyproject.toml
mllm-server/src/legacy/: udp.py
mllm-server/src/mdaq_watcher/: __main__.py  mdap.py
(+44 files in other folders)
