[project]
name = "mllm-security"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Seungbin Yim", email = "ysb06@hotmail.com"},
]
dependencies = ["openai>=1.57.0", "python-dotenv>=1.0.1", "torchtext>=0.18.0", "nltk>=3.9.1", "bert-score>=0.3.13"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.pdm]
distribution = true
